RESOLVED FIXED157617
VideoSinkGStreamer: plug a GstBuffer leak in webkitVideoSinkRequestRender()
https://bugs.webkit.org/show_bug.cgi?id=157617
Summary VideoSinkGStreamer: plug a GstBuffer leak in webkitVideoSinkRequestRender()
Zan Dobersek
Reported 2016-05-12 01:21:28 PDT
VideoSinkGStreamer: plug a GstBuffer leak in webkitVideoSinkRequestRender()
Attachments
Patch (2.34 KB, patch)
2016-05-12 01:24 PDT, Zan Dobersek
no flags
Archive of layout-test-results from ews101 for mac-yosemite (1.39 MB, application/zip)
2016-05-12 01:54 PDT, Build Bot
no flags
Zan Dobersek
Comment 1 2016-05-12 01:24:06 PDT
Build Bot
Comment 2 2016-05-12 01:54:00 PDT
Comment on attachment 278713 [details] Patch Attachment 278713 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1308405 Number of test failures exceeded the failure limit.
Build Bot
Comment 3 2016-05-12 01:54:03 PDT
Created attachment 278716 [details] Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Zan Dobersek
Comment 4 2016-05-12 22:45:31 PDT
Comment on attachment 278713 [details] Patch Clearing flags on attachment: 278713 Committed r200811: <http://trac.webkit.org/changeset/200811>
Zan Dobersek
Comment 5 2016-05-12 22:45:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.